--- a/ach_2077/nbproject/project.properties
+++ b/ach_2077/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.BootsFaces-OSP-1.0.0-dist.jar=../BootsFaces-OSP-1.0.0-dist.jar
 file.reference.jandex-2.0.3.Final.jar=../jandex-2.0.3.Final.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=../mysql-connector-java-5.1.40-bin.jar
 includes=**
@@ -48,7 +49,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${file.reference.mysql-connector-java-5.1.40-bin.jar}:\
-    ${file.reference.jandex-2.0.3.Final.jar}
+    ${file.reference.jandex-2.0.3.Final.jar}:\
+    ${file.reference.BootsFaces-OSP-1.0.0-dist.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
